# Ddacksaeu_web

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
Crawler/: README_stage2_v071.md  postech_mvp_crawler.py  postech_stage2_enricher.py  requirements_postech_stage2.txt  requirements_stage2_v071.txt  run_stage2_v071.ps1  site_overrides.json  site_overrides_v071.example.json  test_postech_stage2_enricher.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: admissions.py  auth.py  documents.py  email.py  health.py  labs.py  me.py  recommendations.py  router.py
backend/app/config/: recommendation_weights.py
backend/app/core/: auth.py  config.py  exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/importers/: __init__.py  admissions.py  postech.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: __init__.py  admissions.py  documents.py  labs.py  me.py  recommendations.py
backend/app/schemas/: __init__.py  admissions.py  auth.py  database.py  documents.py  email.py  labs.py  me.py  recommendations.py
backend/app/services/: __init__.py  admissions.py  cv_lab_similarity.py  email_drafting.py  lab_search.py  recommendation_similarity.py  recommendations.py
backend/app/services/document_analysis/: __init__.py  feedback_generator.py  service.py
backend/app/services/recommendation/: __init__.py  normalization.py
backend/migrations/: env.py
backend/migrations/versions/: 20260718_0001_initial_schema.py  20260718_0002_database_seed_entities.py  20260718_0003_admission_calendar_events.py  20260719_0004_local_cv_analysis.py  20260719_0005_postech_import_provenance.py  20260719_0006_professor_department_identity.py
backend/scripts/: __init__.py  import_admissions.py  import_postech.py  seed.py
backend/tests/: auth_helpers.py  conftest.py  test_admission_import.py  test_admissions.py  test_auth.py  test_config.py  test_cv_lab_similarity.py  test_database.py  test_document_analysis.py  test_email_drafting.py  test_health.py  test_lab_search.py  test_me.py  test_migrations.py  test_postech_import.py  test_recommendations.py  test_seed.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  BACKEND_ROADMAP.md  BRANCH_STRATEGY.md  (+8 more)
(+195 files in other folders)
