[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ddacksaeu-backend"
version = "0.1.0"
description = "FastAPI backend for POSTECH Lab Finder"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "openai>=1.60,<2",
  "pypdf>=5.0,<6",
  "python-multipart>=0.0.18,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
